--- a/Nueva_propuesta/Test_Analisys.ipynb
+++ b/Nueva_propuesta/Test_Analisys.ipynb
@@ -1,6 +1,71 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Info in <TUnixSystem::ACLiC>: creating shared library /home/student/HZZ4l/Nueva_propuesta/1b481e8d_C.so\n",
+      "Warning in cling::IncrementalParser::CheckABICompatibility():\n",
+      "  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'\n",
+      "  Extraction of runtime standard library version was: '20191114'\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%cpp -a\n",
+    "#define HZZAnalysis_cxx\n",
+    "#include \"main_HZZAnalysis.cpp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//#include <iostream>\n",
+    "#include <cstring>\n",
+    "#include <string>\n",
+    "\n",
+    "//#include <TH1.h>\n",
+    "//#include <TH2.h>\n",
+    "#include <TStyle.h>\n",
+    "#include <TMath.h>\n",
+    "#include <TLorentzVector.h>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include \"HZZAnalysis.h\" //Modificado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//#include \"HZZAnalysisHistograms.h\" //Modificado"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,70 +136,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Info in <TUnixSystem::ACLiC>: creating shared library /home/student/HZZ4l/Nueva_propuesta/1b481e8d_C.so\n",
-      "Warning in cling::IncrementalParser::CheckABICompatibility():\n",
-      "  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'\n",
-      "  Extraction of runtime standard library version was: '20191114'\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%cpp -a\n",
-    "#define HZZAnalysis_cxx\n",
-    "#include \"main_HZZAnalysis.cpp\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "//#include <iostream>\n",
-    "#include <cstring>\n",
-    "#include <string>\n",
-    "\n",
-    "//#include <TH1.h>\n",
-    "//#include <TH2.h>\n",
-    "#include <TStyle.h>\n",
-    "#include <TMath.h>\n",
-    "#include <TLorentzVector.h>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Headers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include \"HZZAnalysis.h\" //Modificado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include \"HZZAnalysisHistograms.h\" //Modificado"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -146,26 +147,48 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_43:5:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
+      "{\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m\u001b[1minput_line_43:10:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
+      "{\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m\u001b[1minput_line_43:21:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
+      "{\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m\u001b[1minput_line_43:270:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
+      "{\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m\u001b[1minput_line_43:274:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
+      "{\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "//string name;\n",
+    "string name;\n",
     "\n",
-    "//void HZZAnalysis::Begin(TTree * )\n",
-    "//{\n",
-    "//    nEvents=0;\n",
-    "//}\n",
+    "void HZZAnalysis::Begin(TTree * )\n",
+    "{\n",
+    "    nEvents=0;\n",
+    "}\n",
     "\n",
-    "//void HZZAnalysis::SlaveBegin(TTree * )\n",
-    "//{\n",
-    "//    TString option = GetOption();\n",
-    "//    printf(\"Starting analysis with process option: %s \\n\", option.Data());\n",
+    "void HZZAnalysis::SlaveBegin(TTree * )\n",
+    "{\n",
+    "    TString option = GetOption();\n",
+    "    printf(\"Starting analysis with process option: %s \\n\", option.Data());\n",
+    "    name=option;\n",
     "  \n",
-    "//    name=option;\n",
+    "    define_histograms();\n",
     "  \n",
-    "//    define_histograms();\n",
-    "  \n",
-    "//    FillOutputList();\n",
-    "//}\n",
+    "    FillOutputList();\n",
+    "}\n",
     "\n",
     "Bool_t HZZAnalysis::Process(Long64_t entry)\n",
     "{\n",
@@ -173,7 +196,7 @@
     "    nEvents++;\n",
     "    if (nEvents % 50000 == 0)\n",
     "    {\n",
-    "        std::cout << \"Analysed a total of: \" << nEvents << \" events out of \" << fChain->GetTree()->GetEntries() << \" in this sample\" << std::endl;\n",
+    "        cout << \"Analysed a total of: \" << nEvents << \" events out of \" << fChain->GetTree()->GetEntries() << \" in this sample\" << std::endl;\n",
     "  \n",
     "        if(fChain->GetTree()->GetEntries()>0)\n",
     "        {\n",
@@ -414,8 +437,32 @@
     "        }\n",
     "    }\n",
     "    return kTRUE;\n",
+    "}\n",
+    "\n",
+    "void HZZAnalysis::SlaveTerminate()\n",
+    "{\n",
+    "}\n",
+    "\n",
+    "void HZZAnalysis::Terminate()\n",
+    "{\n",
+    "    // creating the output file\n",
+    "    TString filename_option = GetOption();\n",
+    "    printf(\"Writting with name option: %s \\n\", filename_option.Data());\n",
+    "    TString output_name=\"Output_HZZAnalysis/\"+filename_option+\".root\";\n",
+    "    const char* filename = output_name;\n",
+    " \n",
+    "    TFile physicsoutput(filename,\"recreate\");\n",
+    "    WriteHistograms();\n",
+    "    physicsoutput.Close();\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
