--- a/Nueva_propuesta/Test_Analisys.ipynb
+++ b/Nueva_propuesta/Test_Analisys.ipynb
@@ -147,38 +147,29 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_43:5:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
-      "{\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m\u001b[1minput_line_43:10:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
-      "{\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m\u001b[1minput_line_43:21:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
-      "{\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m\u001b[1minput_line_43:270:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
-      "{\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m\u001b[1minput_line_43:274:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mfunction definition is not allowed here\u001b[0m\n",
-      "{\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "string name;\n",
-    "\n",
+    "string name;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "void HZZAnalysis::Begin(TTree * )\n",
     "{\n",
     "    nEvents=0;\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "void HZZAnalysis::SlaveBegin(TTree * )\n",
     "{\n",
     "    TString option = GetOption();\n",
@@ -188,8 +179,15 @@
     "    define_histograms();\n",
     "  \n",
     "    FillOutputList();\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Bool_t HZZAnalysis::Process(Long64_t entry)\n",
     "{\n",
     "    fChain->GetTree()->GetEntry(entry);\n",
@@ -437,12 +435,26 @@
     "        }\n",
     "    }\n",
     "    return kTRUE;\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "void HZZAnalysis::SlaveTerminate()\n",
     "{\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "void HZZAnalysis::Terminate()\n",
     "{\n",
     "    // creating the output file\n",
