--- a/Nueva_propuesta/Test_Analisys.ipynb
+++ b/Nueva_propuesta/Test_Analisys.ipynb
@@ -4,22 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Info in <TUnixSystem::ACLiC>: creating shared library /home/student/HZZ4l/Nueva_propuesta/1b481e8d_C.so\n",
-      "Warning in cling::IncrementalParser::CheckABICompatibility():\n",
-      "  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'\n",
-      "  Extraction of runtime standard library version was: '20191114'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%cpp -a\n",
+    "%%cpp -d\n",
     "#define HZZAnalysis_cxx\n",
-    "#include \"main_HZZAnalysis.cpp\""
+    "#include \"main_HZZAnalysis.C\""
    ]
   },
   {
@@ -28,12 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//#include <iostream>\n",
+    "#include <iostream> ////\n",
     "#include <cstring>\n",
     "#include <string>\n",
     "\n",
-    "//#include <TH1.h>\n",
-    "//#include <TH2.h>\n",
+    "#include <TH1.h> ////\n",
+    "#include <TH2.h> ////\n",
     "#include <TStyle.h>\n",
     "#include <TMath.h>\n",
     "#include <TLorentzVector.h>\n",
@@ -62,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//#include \"HZZAnalysisHistograms.h\" //Modificado"
+    "#include \"HZZAnalysisHistograms.h\" //Modificado"
    ]
   },
   {
@@ -95,12 +84,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Option: 1"
+      "Option: 0"
      ]
     }
    ],
    "source": [
-    "int option=1; //option\n",
+    "int option=0; //option\n",
     "cout << \"Option: \" << option;"
    ]
   },
@@ -125,12 +114,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Option: 0"
+      "Option: 1"
      ]
     }
    ],
    "source": [
-    "int parallel=0; //option\n",
+    "int parallel=1; //option\n",
     "cout << \"Option: \" << parallel;"
    ]
   },
@@ -138,9 +127,40 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " +++ Starting PROOF-Lite with 2 workers +++\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Opening connections to workers: 1 out of 2 (50 %)\r",
+      "Opening connections to workers: OK (2 workers)                 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROOF set to parallel mode (2 workers)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting up worker servers: 1 out of 2 (50 %)\r",
+      "Setting up worker servers: OK (2 workers)                 \n"
+     ]
+    }
+   ],
    "source": [
-    "main_HZZAnalysis(parallel,option);"
+    "main_HZZAnalysis(parallel,option); //sustituido \"parallel\" por cero"
    ]
   },
   {
@@ -158,10 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "void HZZAnalysis::Begin(TTree * )\n",
-    "{\n",
-    "    nEvents=0;\n",
-    "}"
+    "void HZZAnalysis::Begin(TTree * ){nEvents=0;}"
    ]
   },
   {
@@ -444,9 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "void HZZAnalysis::SlaveTerminate()\n",
-    "{\n",
-    "}"
+    "void HZZAnalysis::SlaveTerminate(){}"
    ]
   },
   {
