Error al recibir la data. Ver argumento de Process en main analisis

--- a/Nueva_propuesta/Test_Analisys.ipynb
+++ b/Nueva_propuesta/Test_Analisys.ipynb
@@ -84,12 +84,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Option: 0"
+      "Option: 1"
      ]
     }
    ],
    "source": [
-    "int option=0; //option\n",
+    "int option=1; //option\n",
     "cout << \"Option: \" << option;"
    ]
   },
@@ -147,15 +147,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROOF set to parallel mode (2 workers)\n"
+      "PROOF set to parallel mode (2 workers)\n",
+      " \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting up worker servers: 1 out of 2 (50 %)\r",
-      "Setting up worker servers: OK (2 workers)                 \n"
+      "Setting up worker servers: OK (2 workers)                 \n",
+      "Info in <TProofLite::SetQueryRunning>: starting query: 1\n",
+      "Info in <TProofQueryResult::SetRunning>: nwrks: 2\n",
+      "Error in <TProofLite::CopyMacroToCache>: header file for Test_Analisys.ipynb not found or not readable (checked extensions: .h,.hh)\n",
+      "Info in <TProofQueryResult::RecordEnd>: output list cloned successfully!\n",
+      "Lite-0: all output objects have been merged                                                         \n"
      ]
     }
    ],
@@ -207,7 +212,19 @@
    "source": [
     "Bool_t HZZAnalysis::Process(Long64_t entry)\n",
     "{\n",
+    "    // The Process() function is called for each entry in the tree to be \n",
+    "    // processed. The entry argument specifies which entry in the currently\n",
+    "    // loaded tree is to be processed.\n",
+    "    // It can be passed to either EventSelector::GetEntry() or TBranch::GetEntry()\n",
+    "    // to read either all or the required parts of the TTree.\n",
+    "    \n",
     "    fChain->GetTree()->GetEntry(entry);\n",
+    "    //GetEntry(): Read all branches of entry and return total number of bytes read. https://root.cern.ch/doc/master/classTTree.html#a9fc48df5560fce1a2d63ecd1ac5b40cb\n",
+    "    //GetEntryList (); //OJO: puesta por Oscar.\n",
+    "    \n",
+    "    //cout << \"Option: \" << entry;\n",
+    "    //fChain->Print();\n",
+    "    \n",
     "    nEvents++;\n",
     "    if (nEvents % 50000 == 0)\n",
     "    {\n",
@@ -472,6 +489,10 @@
    "source": [
     "void HZZAnalysis::Terminate()\n",
     "{\n",
+    "    // The Terminate() function is the last function to be called during the\n",
+    "    // analysis of a tree with a selector. It always runs on the client, it can\n",
+    "    // be used to present the results graphically or save the results to file.\n",
+    "    \n",
     "    // creating the output file\n",
     "    TString filename_option = GetOption();\n",
     "    printf(\"Writting with name option: %s \\n\", filename_option.Data());\n",
