Propuesta de escaneo y entrega de datos

--- a/Nueva_propuesta/Test_Analisys.ipynb
+++ b/Nueva_propuesta/Test_Analisys.ipynb
@@ -4,11 +4,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "In file included from input_line_26:3:\n",
+      "\u001b[1m./entrega_de_datos.C:10:17: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mmember reference type 'Long64_t' (aka 'long long') is not a pointer\u001b[0m\n",
+      "    entry_data->Scan();\n",
+      "\u001b[0;1;32m    ~~~~~~~~~~  ^\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "%%cpp -d\n",
     "#define HZZAnalysis_cxx\n",
-    "#include \"main_HZZAnalysis.C\""
+    "#include \"main_HZZAnalysis.C\"\n",
+    "#include \"entrega_de_datos.C\""
    ]
   },
   {
@@ -129,38 +142,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " +++ Starting PROOF-Lite with 2 workers +++\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Opening connections to workers: 1 out of 2 (50 %)\r",
-      "Opening connections to workers: OK (2 workers)                 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PROOF set to parallel mode (2 workers)\n",
-      " \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting up worker servers: OK (2 workers)                 \n",
-      "Info in <TProofLite::SetQueryRunning>: starting query: 1\n",
-      "Info in <TProofQueryResult::SetRunning>: nwrks: 2\n",
-      "Error in <TProofLite::CopyMacroToCache>: header file for Test_Analisys.ipynb not found or not readable (checked extensions: .h,.hh)\n",
-      "Info in <TProofQueryResult::RecordEnd>: output list cloned successfully!\n",
-      "Lite-0: all output objects have been merged                                                         \n"
+      "\u001b[1minput_line_37:2:3: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'main_HZZAnalysis'\u001b[0m\n",
+      " (main_HZZAnalysis(((*(int*)0x7fcb63303014)), ((*(int*)0x7fcb63303010))))\n",
+      "\u001b[0;1;32m  ^\n",
+      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (main_HZZAnalysis(((*(int*)0x7fcb63303014)), ((*(int*)0x7fcb63303010)))).\n",
+      "Execution of your code was aborted.\n"
      ]
     }
    ],
@@ -172,9 +161,21 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_39:2:3: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'entrega_de_datos'\u001b[0m\n",
+      " (entrega_de_datos())\n",
+      "\u001b[0;1;32m  ^\n",
+      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (entrega_de_datos()).\n",
+      "Execution of your code was aborted.\n"
+     ]
+    }
+   ],
    "source": [
-    "string name;"
+    "entrega_de_datos()"
    ]
   },
   {
@@ -183,12 +184,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "void HZZAnalysis::Begin(TTree * ){nEvents=0;}"
+    "string name;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void HZZAnalysis::Begin(TTree * ){nEvents=0;}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
