sin entrega de datos.h

--- a/Nueva_propuesta/escaneo_de_datos.ipynb
+++ b/Nueva_propuesta/escaneo_de_datos.ipynb
@@ -34,8 +34,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Opening connections to workers: 1 out of 2 (50 %)\r",
-      "Opening connections to workers: OK (2 workers)                 \n"
+      "Opening connections to workers: OK (2 workers)                 \n",
+      "Setting up worker servers: 1 out of 2 (50 %)\r"
      ]
     },
     {
@@ -49,26 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting up worker servers: 1 out of 2 (50 %)\r",
       "Setting up worker servers: OK (2 workers)                 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Info in <TProofLite::SetQueryRunning>: starting query: 1\n",
-      "Info in <TProofQueryResult::SetRunning>: nwrks: 2\n",
-      "Error in <TProofLite::CopyMacroToCache>: header file for entrega_de_datos.C not found or not readable (checked extensions: .h,.hh)\n",
-      "Info in <TProofQueryResult::RecordEnd>: output list cloned successfully!\n",
-      "Lite-0: all output objects have been merged                                                         \n"
      ]
     },
     {
@@ -924,13 +905,6 @@
    "source": [
     "main_HZZAnalysis(1,1);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
