--- a/Nueva_propuesta/Test_Analisys.ipynb
+++ b/Nueva_propuesta/Test_Analisys.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Option: 0"
+     ]
+    }
+   ],
    "source": [
-    "int option=1; //option\n",
+    "int option=0; //option\n",
     "cout << \"Option: \" << option;"
    ]
   },
@@ -99,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Option: 1"
+     ]
+    }
+   ],
    "source": [
     "int parallel=1; //option\n",
     "cout << \"Option: \" << parallel;"
@@ -109,30 +125,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "//if (option == 0)TString sample[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "//if (option == 1)\n",
-    "TString sample[] = {\"data\"};\n",
-    "//if (option == 2) TString sample[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
-    "//if (option == 3) TString sample[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};"
+    "if (option == 0)TString sample[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
+    "if (option == 1)TString sample[] = {\"data\"};\n",
+    "if (option == 2) TString sample[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
+    "if (option == 3) TString sample[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_38:2:47: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'sample'\u001b[0m\n",
+      " (main_HZZAnalysis(((*(int*)0x7f0fb27e6014)), sample[0]))\n",
+      "\u001b[0;1;32m                                              ^\n",
+      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (main_HZZAnalysis(((*(int*)0x7f0fb27e6014)), sample[0])).\n",
+      "Execution of your code was aborted.\n"
+     ]
+    }
+   ],
    "source": [
     "TChain *fchain = new TChain(\"mini\");\n",
-    "fchain = main_HZZAnalysis(parallel,sample[3]); //sustituido \"parallel\" por cero"
+    "fchain = main_HZZAnalysis(parallel,sample[0]); //sustituido \"parallel\" por cero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
