Prueba de data descargada en local, el programa funciona sin problemas. Servirá de base para la corrección de Test_Analysis.ipynb

--- a/Nueva_propuesta/Test_Analysis.ipynb
+++ b/Nueva_propuesta/Test_Analysis.ipynb
@@ -185,6 +185,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -234,7 +241,7 @@
     "\n",
     "for (int i=0; i<lengt;i++){\n",
     "    TChain *fChain = new TChain(\"mini\");\n",
-    "    fChain = main_HZZAnalysis(parallel,event); //sustituido \"parallel\" por cero\n",
+    "    fChain = main_HZZAnalysis(parallel,event);\n",
     "}"
    ]
   },
